# rgb-coloring

./: Cargo.toml  DBG.yaml  README.md
src/: api.rs  detail.rs  lib.rs  resolver.rs  resolvers.rs  tests.rs  types.rs
